# email-client

./: .env.example  .gitignore  GOOGLE_AUTH_SETUP.md  OAUTH_REDIRECT_URI_FIX.md  OAUTH_SETUP.md  README.md  SYNC_PLAN.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: create_icon.sh
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: imap.rs  mod.rs  smtp.rs  system.rs
apps/desktop/src/styles/: index.css
apps/desktop/src/ui/: App.tsx
apps/desktop/src/ui/components/: AccountMenu.tsx  ComposeModal.tsx  FloatingMenu.tsx  MailList.tsx  MailViewer.tsx  OAuthUrlInputModal.tsx  Sidebar.tsx  TopBar.tsx
apps/desktop/src/ui/hooks/: useAccounts.ts  useAutoSync.ts  useMessages.ts
apps/desktop/src/ui/pages/: OAuthCallback.tsx
apps/desktop/src/ui/store/: useMailStore.ts
