[package]
name = "mail-client"
version = "1.0.0"
description = "A modern email client built with Tauri"
authors = ["Mail Client Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-store = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-imap = "0.9"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "compat"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mailparse = "0.14"
lettre = "0.11"
base64 = "0.22"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

